<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeelsBookHome">

    <TextView
        android:id="@+id/home_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/home_title_textview"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/button_love"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_history"
        android:layout_width="96dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:onClick="gotoDelete"
        android:text="@string/history_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_stats"
        android:layout_width="81dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:onClick="gotoStats"
        android:text="@string/stats_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_love"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="227dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:onClick="sendLove"
        android:text="@string/love_button"
        app:layout_constraintBottom_toTopOf="@+id/button_fear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_title_textview" />

    <Button
        android:id="@+id/button_sadness"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="152dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="152dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="188dp"
        android:onClick="sendSadness"
        android:text="@string/sadness_button"
        app:layout_constraintBottom_toTopOf="@+id/button_surprise"
        app:layout_constraintEnd_toStartOf="@+id/button_anger"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_anger"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="106dp"
        android:onClick="sendAnger"
        android:text="@string/anger_button"
        app:layout_constraintBottom_toTopOf="@+id/button_joy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/home_text"
        app:layout_constraintTop_toBottomOf="@+id/home_title_textview" />

    <Button
        android:id="@+id/button_surprise"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="139dp"
        android:layout_marginEnd="152dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="152dp"
        android:layout_marginStart="16dp"
        android:onClick="sendSurprise"
        android:text="@string/surprise_button"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/button_history"
        app:layout_constraintEnd_toStartOf="@+id/button_joy"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_joy"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="139dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="15dp"
        android:onClick="sendJoy"
        android:text="@string/joy_button"
        app:layout_constraintBottom_toTopOf="@+id/button_stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/home_text" />

    <Button
        android:id="@+id/button_fear"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="135dp"
        android:layout_marginTop="37dp"
        android:onClick="sendFear"
        android:text="@string/fear_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_text" />

    <TextView
        android:id="@+id/home_text"
        android:layout_width="121dp"
        android:layout_height="127dp"
        android:text="@string/home_text"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>