<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmotionRecorded">

    <TextView
        android:id="@+id/text_emotion_recorded"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        android:text="@string/emotion_recorded_text"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_user_comment"
        android:layout_width="272dp"
        android:layout_height="306dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="48dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hint_user_comment"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/button_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_emotion_recorded" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="84dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:onClick="enterEmotionCancel"
        android:text="@android:string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/button_enter"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_user_comment" />

    <Button
        android:id="@+id/button_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="12dp"
        android:onClick="enterEmotionEnter"
        android:text="@string/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_user_comment" />

</android.support.constraint.ConstraintLayout>